[package]
name = "transformers-ao"
version = "0.0.1"
edition = "2021"
#build = "build/main.rs"

[features]
default = []
lib = []
logging = []

[lib]
crate-type = ["cdylib"]

[dependencies]
mlua = { version = "0.9.8", features = ["lua53", "serialize", "vendored", "macros", "send"] }
serde = { version = "1.0.171" }
serde_json = "1.0.117"
wasm-bindgen = "0.2.92"
base64 = "0.22.1"
# candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.6.0" }
# candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.6.0" }
# candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.6.0" }
candle-core = { git = "https://github.com/huggingface/candle.git", tag = "0.5.1" }
candle-nn = { git = "https://github.com/huggingface/candle.git", tag = "0.5.1" }
candle-transformers = { git = "https://github.com/huggingface/candle.git", tag = "0.5.1" }
#image = { version = "0.25.0", default-features = false, features = ["png"] }
rayon = "1.7.0"
tokenizers = { git = "https://github.com/huggingface/tokenizers.git", default-features = false, features = ["onig", "unstable_wasm"] }
safetensors = "0.4.3"
console_error_panic_hook = "0.1.7"
lazy_static = "1.4.0"

[build-dependencies]
cc = "1.0.3"

[profile.release]
#opt-level = "z"
#lto = true
codegen-units = 16
panic = "unwind" # "abort"
strip = "none" #"debuginfo" #none # debuginfo # symbols
debug = true
debug-assertions = true
#overflow-checks = false

[profile.dev]
opt-level = 2
lto = false
codegen-units = 1 # I think 16 is default
debug = true
debug-assertions = false
overflow-checks = true

[[test]]
name = "lib_test"
path = "tests/lib_test.rs"